<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/searchForEvents"
        android:id="@+id/filterTitle" />

    <com.team45.gtpickupsports.MultiSelectionSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sportTypeMultiSpinner"
        android:layout_gravity="center_horizontal"/>

    <com.team45.gtpickupsports.MultiSelectionSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/locationMultiSpinner"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center|top"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startDateTimeTitle"
                android:id="@+id/startDateTimeTitle"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/startDateTimeText"
                android:layout_gravity="center" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setStartTimeButtonText"
                android:id="@+id/startTimeButton"
                android:layout_gravity="center" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setStartDateButtonText"
                android:id="@+id/startDateButton"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/endDateTimeTitle"
                android:id="@+id/endDateTimeTitle"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/endDateTimeText"
                android:layout_gravity="center" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setEndTimeButtonText"
                android:id="@+id/endTimeButton"
                android:layout_gravity="center" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setEndDateButtonText"
                android:id="@+id/endDateButton"
                android:layout_gravity="center" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>