<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/userLoggedIn"
            android:text="@string/userLoggedIn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center_horizontal"
            android:textSize="20sp"
            android:paddingTop="15dp" />

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eventsList"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/empty"
            android:text="@string/noEvents"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center_horizontal"
            android:textSize="20sp"
            android:paddingTop="15dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/fullEventListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="14dp"
            android:text="@string/fullEventListButtonText"
            android:onClick="showFullEventList"
            android:visibility="invisible"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.team45.gtpickupsports.FloatingActionButton
            android:id="@+id/fabbutton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp" />

    </LinearLayout>


</FrameLayout>